tsconfig.json 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,3 +7,15 @@
     "lib": ["ES5", "DOM"]
   }
 }
+
+// WHY
+/*
+  include는 타입스크립트를 작성할 위치. 그래서 src를 추가해주었음
+  compilerOptions는 컴파일 옵션들을 적는 곳이다.
+  그 안에 값을 보면 outDir가 있는데 이것은 타입스크립트로 컴파일한 후 결과물이 만들어 질 곳이다.
+  웹팩과 똑같은 위치로 잡아주었음
+  브라우저에서 실행되어야 하기 때문에 컴파일 코드 타겟(변환시 목표로 하는 문법)은 es5로 설정하였음
+  module은 코드 부분은 모든 모듈형태에서 사용할 수 있도록 Universal Module Definition 형태가 되어야 해서 UMD로 설정
+  lib에 타입들을 적어주기 위해 @types/node를 추가했음
+  lib에 DOM, ES5 등을 추가해서 어떤 환경에서 작동할 것인지를 알려주면 타입스크립트의 call signature로 도움 받을 수 있음
+*/
