--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "ts-jest-common-module",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack --mode development",
+    "prod": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "RunningWater",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.38",
-    "typescript": "^4.7.2"
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.2",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "clean-webpack-plugin": "^4.0.0"
   }
 }
