--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "include": ["src"],
   "compilerOptions": {
-    "outDir": "build",
+    "outDir": "./build/",
     "target": "ES5",
     "module": "UMD",
     "lib": ["ES5", "DOM"]
