--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "ts-jest-common-module",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development",
-    "prod": "webpack --mode production",
+    "dev": "webpack --config webpack.dev.js",
+    "prod": "webpack --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "RunningWater",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.38",
+    "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.2",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "clean-webpack-plugin": "^4.0.0"
