--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^4.0.0"
+    "clean-webpack-plugin": "^4.0.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
