--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@types/base-64": "^1.0.0",
+    "base-64": "^1.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "whatwg-fetch": "^3.6.2"
   }
