--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "dev": "webpack --config webpack.dev.js",
     "prod": "webpack --config webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "author": "RunningWater",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "@types/node": "^17.0.38",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "ts-jest": "^28.0.4",
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.2",
     "webpack": "^5.73.0",
